feat(app,search): 优化商品搜索功能，支持拼音搜索和智能属性筛选