@@ -3,12 +3,15 @@ package com.mallease.search.service.impl;
 import co.elastic.clients.elasticsearch._types.FieldValue;
 import co.elastic.clients.elasticsearch._types.aggregations.*;
 import co.elastic.clients.elasticsearch._types.query_dsl.*;
+import co.elastic.clients.elasticsearch.core.UpdateRequest;
 import co.elastic.clients.json.JsonData;
+import com.mallease.common.api.Page;
+import com.mallease.common.dto.remote.SearchFilterDTO;
+import com.mallease.common.dto.remote.SpuSearchQuery;
+import com.mallease.common.dto.remote.SpuSearchResultDTO;
 import com.mallease.common.exception.ApiException;
-import com.mallease.search.model.client.query.SpuSearchQuery;
-import com.mallease.search.model.client.vo.SearchFilterVO;
-import com.mallease.search.model.client.vo.SpuSearchPageVO;
-import com.mallease.search.model.client.vo.SpuSearchResultVO;
+import com.mallease.search.converter.SpuDocConverter;
+import com.mallease.common.dto.remote.SpuRecommendDTO;
 import com.mallease.search.model.data.doc.SpuDocument;
 import com.mallease.search.model.enums.SpuSortType;
 import com.mallease.search.model.enums.SpuStatus;
@@ -16,6 +19,7 @@ import com.mallease.search.repository.SpuDocumentRepository;
 import com.mallease.search.service.SpuSearchService;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.elasticsearch.client.Request;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Sort;
 import org.springframework.data.elasticsearch.client.elc.ElasticsearchAggregations;
@@ -48,6 +52,7 @@ public class SpuSearchServiceImpl implements SpuSearchService {
 
     private final ElasticsearchOperations elasticsearchOperations;
     private final SpuDocumentRepository spuDocumentRepository;
+    private final SpuDocConverter spuDocConverter;
 
     @Override
     public List<SpuDocument> search(SpuSearchQuery query) {
@@ -56,7 +61,7 @@ public class SpuSearchServiceImpl implements SpuSearchService {
                         "规格={}, 排序类型={}, 需要聚合={}, 页码={}, 每页={}",
                 query.getKeyword(), query.getBrandIds(), query.getCategoryId(), query.getCategoryPath(),
                 query.getMinPrice(), query.getMaxPrice(), query.getInStock(), query.getNewStatus(), query.getRecommendStatus(),
-                query.getSpecs(), query.getSortType(), query.getNeedAggregation(), query.getPageNum(), query.getPageSize());
+                query.getAttrValues(), query.getSortType(), query.getNeedAggregation(), query.getPageNum(), query.getPageSize());
 
         boolean hasKeyword = StringUtils.hasText(query.getKeyword());
         BoolQuery.Builder boolBuilder = new BoolQuery.Builder();
@@ -65,7 +70,10 @@ public class SpuSearchServiceImpl implements SpuSearchService {
         if (hasKeyword) {
             MultiMatchQuery multiMatch = MultiMatchQuery.of(m -> m
                     .query(query.getKeyword())
-                    .fields("name^3", "subTitle^2", "keywords")
+                    // 兼容拼音搜索：SpuDocument 已为 name/subTitle/keywords 建立 *.pinyin multi-field
+                    // 这里用较低权重，避免拼音命中过度“抢占”中文分词的相关性
+                    .fields("name^3", "subTitle^2", "keywords",
+                            "name.pinyin^2", "subTitle.pinyin", "keywords.pinyin")
                     .type(TextQueryType.BestFields)
                     .operator(Operator.And));
             Query keywordQuery = Query.of(q -> q.multiMatch(multiMatch));
@@ -236,7 +244,7 @@ public class SpuSearchServiceImpl implements SpuSearchService {
                         .build();
                 queries.add(updateQuery);
             }
-            elasticsearchOperations.bulkUpdate(queries,SpuDocument.class);
+            elasticsearchOperations.bulkUpdate(queries, SpuDocument.class);
             elasticsearchOperations.bulkUpdate(queries,
                     elasticsearchOperations.getIndexCoordinatesFor(SpuDocument.class));
 
@@ -252,177 +260,211 @@ public class SpuSearchServiceImpl implements SpuSearchService {
     }
 
     @Override
-    public SpuSearchPageVO searchWithAggregation(SpuSearchQuery query) {
+    public SpuSearchResultDTO searchWithAggregation(SpuSearchQuery query) {
         log.info("【聚合搜索开始】关键词={}, 品牌IDs={}, 分类ID={}, 价格区间=[{}-{}], 规格={}",
                 query.getKeyword(), query.getBrandIds(), query.getCategoryId(),
-                query.getMinPrice(), query.getMaxPrice(), query.getSpecs());
+                query.getMinPrice(), query.getMaxPrice(), query.getAttrValues());
 
         boolean hasKeyword = StringUtils.hasText(query.getKeyword());
 
-        BoolQuery.Builder baseQueryBuilder = new BoolQuery.Builder();
+        List<Query> commonFilters = new ArrayList<>();
 
-        // 关键字搜索
-        if (hasKeyword) {
-            MultiMatchQuery multiMatch = MultiMatchQuery.of(m -> m
-                    .query(query.getKeyword())
-                    .fields("name^3", "subTitle^2", "keywords")
-                    .type(TextQueryType.BestFields)
-                    .operator(Operator.And));
-            baseQueryBuilder.must(Query.of(q -> q.multiMatch(multiMatch)));
+        commonFilters.add(Query.of(q -> q.term(t -> t.field("publishStatus").value(1))));
+
+        if (Integer.valueOf(1).equals(query.getRecommendStatus())) {
+            commonFilters.add(Query.of(q -> q.term(t -> t.field("recommendStatus").value(1))));
         }
 
-        // 只查询已上架
-        baseQueryBuilder.filter(Query.of(q -> q.term(t -> t.field("publishStatus").value(1))));
+        if (Integer.valueOf(1).equals(query.getNewStatus())) {
+            commonFilters.add(Query.of(q -> q.term(t -> t.field("newStatus").value(1))));
+        }
 
-        Query baseQuery = Query.of(q -> q.bool(baseQueryBuilder.build()));
+        if (Boolean.TRUE.equals(query.getInStock())) {
+            commonFilters.add(Query.of(q -> q.term(t -> t.field("inStock").value(true))));
+        }
 
-        // 筛选条件，不影响聚合
-        BoolQuery.Builder postFilterBuilder = new BoolQuery.Builder();
-        boolean hasPostFilter = false;
+        Query priceFilter = null;
+        if (query.getMinPrice() != null || query.getMaxPrice() != null) {
+            List<Query> priceRanges = new ArrayList<>();
+            if (query.getMinPrice() != null) {
+                priceRanges.add(Query.of(q -> q.range(r -> r.field("maxPrice").gte(JsonData.of(query.getMinPrice())))));
+            }
+            if (query.getMaxPrice() != null) {
+                priceRanges.add(Query.of(q -> q.range(r -> r.field("minPrice").lte(JsonData.of(query.getMaxPrice())))));
+            }
+            priceFilter = Query.of(q -> q.bool(b -> b.filter(priceRanges)));
+            commonFilters.add(priceFilter);
+        }
 
-        // 品牌筛选
+        Query brandFilter = null;
         if (!CollectionUtils.isEmpty(query.getBrandIds())) {
-            postFilterBuilder.filter(Query.of(q -> q.terms(t -> t.field("brandId")
-                    .terms(tf -> tf.value(query.getBrandIds().stream()
-                            .map(FieldValue::of).collect(Collectors.toList()))))));
-            hasPostFilter = true;
+            brandFilter = Query.of(q -> q.terms(t -> t.field("brandId")
+                    .terms(v -> v.value(query.getBrandIds().stream()
+                            .map(FieldValue::of).collect(Collectors.toList())))));
         }
 
-        // 分类筛选
-        if (query.getCategoryId() != null) {
-            postFilterBuilder.filter(Query.of(q -> q.term(
-                    t -> t.field("categoryId").value(query.getCategoryId()))));
-            hasPostFilter = true;
+        Query categoryFilter = null;
+        if (query.getCategoryId() != null && query.getCategoryId() > 0) {
+            categoryFilter = Query.of(q -> q.term(
+                    t -> t.field("categoryId").value(query.getCategoryId())));
         }
 
-        // 价格区间筛选
-        BigDecimal minPrice = query.getMinPrice();
-        BigDecimal maxPrice = query.getMaxPrice();
-        boolean hasMinPrice = minPrice != null && minPrice.compareTo(BigDecimal.ZERO) > 0;
-        boolean hasMaxPrice = maxPrice != null && maxPrice.compareTo(BigDecimal.ZERO) > 0;
-
-        if (hasMinPrice || hasMaxPrice) {
-            RangeQuery.Builder rangeBuilder = new RangeQuery.Builder().field("minPrice");
-            if (hasMinPrice) {
-                rangeBuilder.gte(JsonData.of(minPrice));
-            }
-            if (hasMaxPrice) {
-                rangeBuilder.lte(JsonData.of(maxPrice));
-            }
-            postFilterBuilder.filter(Query.of(q -> q.range(rangeBuilder.build())));
-            hasPostFilter = true;
-        }
-
-        // 属性筛选（嵌套查询，仅筛选 filterable=true 的规格属性）
-        if (!CollectionUtils.isEmpty(query.getSpecs())) {
-            for (String spec : query.getSpecs()) {
-                String[] parts = spec.split(":");
-                if (parts.length == 2) {
-                    Long attrId = Long.parseLong(parts[0]);
-                    String attrValue = parts[1];
-
-                    postFilterBuilder.filter(Query.of(q -> q.nested(n -> n
-                            .path("attrValueList")
-                            .query(nq -> nq.bool(nb -> nb
-                                    .must(Query.of(mq -> mq.term(t -> t
-                                            .field("attrValueList.attrId").value(attrId))))
-                                    .must(Query.of(mq -> mq.term(t -> t
-                                            .field("attrValueList.attrValue").value(attrValue)))))))));
-                    hasPostFilter = true;
+        Map<Long, Query> attrFilterMap = new HashMap<>();
+        if (!CollectionUtils.isEmpty(query.getAttrValues())) {
+            for (Map.Entry<Long, List<String>> entry : query.getAttrValues().entrySet()) {
+                if (entry.getKey() != null && !CollectionUtils.isEmpty(entry.getValue())) {
+                    attrFilterMap.put(entry.getKey(), buildNestedAttrQuery(entry.getKey(), entry.getValue()));
                 }
             }
         }
 
-        // 库存筛选
-        if (Boolean.TRUE.equals(query.getInStock())) {
-            postFilterBuilder.filter(Query.of(q -> q.term(t -> t.field("inStock").value(true))));
-            hasPostFilter = true;
+        Query baseQuery;
+        if (hasKeyword) {
+            baseQuery = Query.of(q -> q.multiMatch(m -> m
+                    .fields("name^3", "subTitle^2", "keywords",
+                            "name.pinyin^2", "subTitle.pinyin", "keywords.pinyin")
+                    .query(query.getKeyword())
+                    .type(TextQueryType.BestFields)
+                    .operator(Operator.And)));
+        } else {
+            baseQuery = Query.of(q -> q.matchAll(m -> m));
         }
 
-        // 品牌聚合（brandName 是 MultiField，聚合需使用 .keyword 子字段）
-        Aggregation brandAgg = Aggregation.of(a -> a
-                .terms(t -> t.field("brandId").size(50))
-                .aggregations("brandName", Aggregation.of(sa -> sa
-                        .terms(st -> st.field("brandName.keyword").size(1)))));
-
-        // 分类聚合
-        Aggregation categoryAgg = Aggregation.of(a -> a
-                .terms(t -> t.field("categoryId").size(50))
-                .aggregations("categoryName", Aggregation.of(sa -> sa
-                        .terms(st -> st.field("categoryName").size(1)))));
-
-        // 属性聚合（嵌套聚合，仅聚合 filterable=true 的规格属性）
-        Aggregation attrAgg = Aggregation.of(a -> a
-                .nested(n -> n.path("attrValueList"))
-                .aggregations("filteredAttrs", Aggregation.of(fa -> fa
-                        .filter(f -> f.term(t -> t.field("attrValueList.filterable").value(true)))
-                        .aggregations("attrId", Aggregation.of(sa -> sa
-                                .terms(t -> t.field("attrValueList.attrId").size(20))
-                                .aggregations("attrName", Aggregation.of(sna -> sna
-                                        .terms(st -> st.field("attrValueList.attrName").size(1))))
-                                .aggregations("attrValue", Aggregation.of(sva -> sva
-                                        .terms(st -> st.field("attrValueList.attrValue").size(50)))))))));
-
-        // 价格区间聚合
-        Aggregation priceAgg = Aggregation.of(a -> a
-                .range(r -> r.field("minPrice")
-                        .ranges(
-                                AggregationRange.of(ar -> ar.key("0-300").to("300")),
-                                AggregationRange.of(ar -> ar.key("300-800").from("300").to("800")),
-                                AggregationRange.of(ar -> ar.key("800-2000").from("800").to("2000")),
-                                AggregationRange.of(ar -> ar.key("2000+").from("2000"))
-                        )));
-
-        // 完整查询
-        SpuSortType sortType = SpuSortType.fromCode(query.getSortType());
-        Sort sort = sortType.buildSort(hasKeyword);
+        List<Query> hitFilters = new ArrayList<>(commonFilters);
+        if (brandFilter != null) hitFilters.add(brandFilter);
+        if (categoryFilter != null) hitFilters.add(categoryFilter);
+        hitFilters.addAll(attrFilterMap.values());
 
         NativeQueryBuilder queryBuilder = NativeQuery.builder()
                 .withQuery(baseQuery)
+                .withFilter(Query.of(q -> q.bool(b -> b.filter(hitFilters))))
                 .withPageable(PageRequest.of(query.getPageNum() - 1, query.getPageSize()))
-                .withSort(sort)
-                .withAggregation("brandAgg", brandAgg)
-                .withAggregation("categoryAgg", categoryAgg)
-                .withAggregation("attrAgg", attrAgg)
-                .withAggregation("priceAgg", priceAgg);
+                .withSort(SpuSortType.fromCode(query.getSortType())
+                        .buildSort(StringUtils.hasText(query.getKeyword())));
 
-        // 添加 Post Filter
-        if (hasPostFilter) {
-            queryBuilder.withFilter(Query.of(q -> q.bool(postFilterBuilder.build())));
+        // 聚合
+        if (Boolean.TRUE.equals(query.getNeedAggregation())) {
+
+            List<Query> brandAggFilters = new ArrayList<>(commonFilters);
+            if (categoryFilter != null) brandAggFilters.add(categoryFilter);
+            brandAggFilters.addAll(attrFilterMap.values());
+
+            queryBuilder.withAggregation("brand_agg_filtered", Aggregation.of(a -> a
+                    .filter(f -> f.bool(b -> b.filter(brandAggFilters)))
+                    .aggregations("brands", sub -> sub.terms(t -> t.field("brandId").size(50))
+                            .aggregations("brandName", name -> name.terms(t -> t.field("brandName.keyword").size(1)))
+                    )
+            ));
+
+            List<Query> catAggFilters = new ArrayList<>(commonFilters);
+            if (brandFilter != null) catAggFilters.add(brandFilter);
+            catAggFilters.addAll(attrFilterMap.values());
+
+            queryBuilder.withAggregation("category_agg_filtered", Aggregation.of(a -> a
+                    .filter(f -> f.bool(b -> b.filter(catAggFilters)))
+                    .aggregations("categories", sub -> sub.terms(t -> t.field("categoryId").size(50))
+                            .aggregations("categoryName", name -> name.terms(t -> t.field("categoryName").size(1)))
+                    )
+            ));
+
+            List<Query> mainAttrFilters = new ArrayList<>(commonFilters);
+            if (brandFilter != null) mainAttrFilters.add(brandFilter);
+            if (categoryFilter != null) mainAttrFilters.add(categoryFilter);
+            mainAttrFilters.addAll(attrFilterMap.values());
+
+            queryBuilder.withAggregation("main_attr_panel", Aggregation.of(a -> a
+                    .filter(f -> f.bool(b -> b.filter(mainAttrFilters)))
+                    .aggregations("nested_attr", sub -> sub.nested(n -> n.path("attrValueList"))
+                            .aggregations("filtered_filterable", f -> f.filter(ff -> ff.term(t -> t.field("attrValueList.filterable").value(true)))
+                                    .aggregations("attr_ids", t -> t.terms(tt -> tt.field("attrValueList.attrId").size(20))
+                                            .aggregations("attr_names", name -> name.terms(nt -> nt.field("attrValueList.attrName").size(1)))
+                                            .aggregations("attr_values", val -> val.terms(vt -> vt.field("attrValueList.attrValue").size(50)))
+                                    )
+                            )
+                    )
+            ));
+
+
+            if (!attrFilterMap.isEmpty()) {
+                for (Long targetId : attrFilterMap.keySet()) {
+
+                    List<Query> patchFilters = new ArrayList<>(commonFilters);
+                    if (brandFilter != null) patchFilters.add(brandFilter);
+                    if (categoryFilter != null) patchFilters.add(categoryFilter);
+
+                    for (Map.Entry<Long, Query> entry : attrFilterMap.entrySet()) {
+                        if (!entry.getKey().equals(targetId)) {
+                            patchFilters.add(entry.getValue());
+                        }
+                    }
+
+                    queryBuilder.withAggregation("patch_attr_" + targetId, Aggregation.of(a -> a
+                            .filter(f -> f.bool(b -> b.filter(patchFilters)))
+                            .aggregations("nested_path", sub -> sub.nested(n -> n.path("attrValueList"))
+                                    .aggregations("target_attr_filter", f -> f
+                                            .filter(ff -> ff.term(t -> t.field("attrValueList.attrId").value(targetId)))
+                                            .aggregations("valid_values", v -> v.terms(t -> t.field("attrValueList.attrValue").size(50)))
+                                    )
+                            )
+                    ));
+                }
+            }
+
+            List<Query> commonFiltersWithoutPrice = new ArrayList<>(commonFilters);
+            if (priceFilter != null) {
+                commonFiltersWithoutPrice.remove(priceFilter);
+            }
+            List<Query> priceAggFilters = new ArrayList<>(commonFiltersWithoutPrice);
+            if (brandFilter != null) priceAggFilters.add(brandFilter);
+            if (categoryFilter != null) priceAggFilters.add(categoryFilter);
+            priceAggFilters.addAll(attrFilterMap.values());
+
+            queryBuilder.withAggregation("price_range_filtered", Aggregation.of(a -> a
+                    .filter(f -> f.bool(b -> b.filter(priceAggFilters)))
+                    .aggregations("min_price", sub -> sub.min(m -> m.field("minPrice")))
+                    .aggregations("max_price", sub -> sub.max(m -> m.field("maxPrice")))
+            ));
         }
 
         NativeQuery nativeQuery = queryBuilder.build();
-
-        // 执行搜索
         SearchHits<SpuDocument> searchHits = elasticsearchOperations.search(nativeQuery, SpuDocument.class);
-
-        // 解析商品列表
         List<SpuDocument> docs = searchHits.getSearchHits().stream()
                 .map(SearchHit::getContent)
-                .collect(Collectors.toList());
+                .toList();
 
-        // 解析聚合结果
-        SearchFilterVO filters = null;
+        SearchFilterDTO filters = new SearchFilterDTO();
         if (Boolean.TRUE.equals(query.getNeedAggregation()) && searchHits.hasAggregations()) {
-            filters = parseAggregations(searchHits);
+            filters = parseAggregations(searchHits, query);
         }
 
         log.info("【聚合搜索完成】命中总数={}, 返回数量={}", searchHits.getTotalHits(), docs.size());
 
-        return SpuSearchPageVO.builder()
-                .total(searchHits.getTotalHits())
-                .list(convertToVoList(docs))
+        List<SpuRecommendDTO> products = spuDocConverter.docListToDTOList(docs);
+        Page<SpuRecommendDTO> productPage = buildPage(query, searchHits.getTotalHits(), products);
+
+        return SpuSearchResultDTO.builder()
+                .products(productPage)
                 .filters(filters)
                 .build();
+    }
+
+    private Query buildNestedAttrQuery(Long attrId, List<String> values) {
+        return Query.of(q -> q.nested(n -> n
+                .path("attrValueList")
+                .query(nq -> nq.bool(b -> b
+                        .must(m -> m.term(t -> t.field("attrValueList.attrId").value(attrId)))
+                        .must(m -> m.term(t -> t.field("attrValueList.filterable").value(true)))
+                        .must(m -> m.terms(t -> t.field("attrValueList.attrValue")
+                                .terms(ts -> ts.value(values.stream().map(FieldValue::of).toList()))))))));
     }
 
     /**
      * 解析聚合结果
      */
-    private SearchFilterVO parseAggregations(SearchHits<SpuDocument> searchHits) {
+    private SearchFilterDTO parseAggregations(SearchHits<SpuDocument> searchHits, SpuSearchQuery query) {
         ElasticsearchAggregations aggregations = (ElasticsearchAggregations) searchHits.getAggregations();
         if (aggregations == null) {
-            return null;
+            return new SearchFilterDTO();
         }
 
         Map<String, Aggregate> aggMap = aggregations.aggregations().stream()
@@ -431,35 +473,37 @@ public class SpuSearchServiceImpl implements SpuSearchService {
                         agg -> agg.aggregation().getAggregate()
                 ));
 
-        // 解析品牌聚合
-        List<SearchFilterVO.BrandAggVO> brands = parseBrandAggregation(aggMap.get("brandAgg"));
+        List<SearchFilterDTO.FilterItem> brands = parseBrandAggregation(aggMap.get("brand_agg_filtered"));
 
-        // 解析分类聚合
-        List<SearchFilterVO.CategoryAggVO> categories = parseCategoryAggregation(aggMap.get("categoryAgg"));
+        List<SearchFilterDTO.FilterItem> categories = parseCategoryAggregation(aggMap.get("category_agg_filtered"));
 
-        // 解析属性聚合
-        List<SearchFilterVO.AttrAggVO> attrs = parseAttrAggregation(aggMap.get("attrAgg"));
+        List<SearchFilterDTO.AttrFilterItem> attrs = parseAttrAggregation(aggMap, query);
 
-        // 解析价格区间聚合
-        List<SearchFilterVO.PriceRangeVO> priceRanges = parsePriceAggregation(aggMap.get("priceAgg"));
+        SearchFilterDTO.PriceRange priceRange = parsePriceRangeAggregation(aggMap.get("price_range_filtered"));
 
-        return SearchFilterVO.builder()
+        return SearchFilterDTO.builder()
                 .brands(brands)
                 .categories(categories)
                 .attrs(attrs)
-                .priceRanges(priceRanges)
+                .priceRange(priceRange)
                 .build();
     }
 
     /**
      * 解析品牌聚合
      */
-    private List<SearchFilterVO.BrandAggVO> parseBrandAggregation(Aggregate aggregate) {
-        if (aggregate == null || !aggregate.isLterms()) {
+    private List<SearchFilterDTO.FilterItem> parseBrandAggregation(Aggregate aggregate) {
+
+        if (aggregate == null || !aggregate.isFilter()) {
             return Collections.emptyList();
         }
 
-        return aggregate.lterms().buckets().array().stream()
+        Aggregate brandsAgg = aggregate.filter().aggregations().get("brands");
+        if (brandsAgg == null || !brandsAgg.isLterms()) {
+            return Collections.emptyList();
+        }
+
+        return brandsAgg.lterms().buckets().array().stream()
                 .map(bucket -> {
                     String brandName = "";
                     if (bucket.aggregations().containsKey("brandName")) {
@@ -468,9 +512,9 @@ public class SpuSearchServiceImpl implements SpuSearchService {
                             brandName = nameAgg.sterms().buckets().array().get(0).key().stringValue();
                         }
                     }
-                    return SearchFilterVO.BrandAggVO.builder()
-                            .brandId(bucket.key())
-                            .brandName(brandName)
+                    return SearchFilterDTO.FilterItem.builder()
+                            .id(bucket.key()) // brandId
+                            .name(brandName)
                             .count(bucket.docCount())
                             .build();
                 })
@@ -480,12 +524,18 @@ public class SpuSearchServiceImpl implements SpuSearchService {
     /**
      * 解析分类聚合
      */
-    private List<SearchFilterVO.CategoryAggVO> parseCategoryAggregation(Aggregate aggregate) {
-        if (aggregate == null || !aggregate.isLterms()) {
+    private List<SearchFilterDTO.FilterItem> parseCategoryAggregation(Aggregate aggregate) {
+
+        if (aggregate == null || !aggregate.isFilter()) {
             return Collections.emptyList();
         }
 
-        return aggregate.lterms().buckets().array().stream()
+        Aggregate categoriesAgg = aggregate.filter().aggregations().get("categories");
+        if (categoriesAgg == null || !categoriesAgg.isLterms()) {
+            return Collections.emptyList();
+        }
+
+        return categoriesAgg.lterms().buckets().array().stream()
                 .map(bucket -> {
                     String categoryName = "";
                     if (bucket.aggregations().containsKey("categoryName")) {
@@ -494,9 +544,9 @@ public class SpuSearchServiceImpl implements SpuSearchService {
                             categoryName = nameAgg.sterms().buckets().array().get(0).key().stringValue();
                         }
                     }
-                    return SearchFilterVO.CategoryAggVO.builder()
-                            .categoryId(bucket.key())
-                            .categoryName(categoryName)
+                    return SearchFilterDTO.FilterItem.builder()
+                            .id(bucket.key())
+                            .name(categoryName)
                             .count(bucket.docCount())
                             .build();
                 })
@@ -504,102 +554,145 @@ public class SpuSearchServiceImpl implements SpuSearchService {
     }
 
     /**
-     * 解析属性聚合（嵌套聚合）
+     * 解析属性聚合
      */
-    private List<SearchFilterVO.AttrAggVO> parseAttrAggregation(Aggregate aggregate) {
-        if (aggregate == null || !aggregate.isNested()) {
+    private List<SearchFilterDTO.AttrFilterItem> parseAttrAggregation(Map<String, Aggregate> aggMap, SpuSearchQuery query) {
+
+        Aggregate mainPanelAgg = aggMap.get("main_attr_panel");
+        if (mainPanelAgg == null || !mainPanelAgg.isFilter()) {
             return Collections.emptyList();
         }
 
-        // 获取过滤后的属性聚合
-        Aggregate filteredAttrsAgg = aggregate.nested().aggregations().get("filteredAttrs");
-        if (filteredAttrsAgg == null || !filteredAttrsAgg.isFilter()) {
-            return Collections.emptyList();
-        }
+        Aggregate nestedAgg = mainPanelAgg.filter().aggregations().get("nested_attr");
+        if (nestedAgg == null || !nestedAgg.isNested()) return Collections.emptyList();
 
-        Aggregate attrIdAgg = filteredAttrsAgg.filter().aggregations().get("attrId");
-        if (attrIdAgg == null || !attrIdAgg.isLterms()) {
-            return Collections.emptyList();
-        }
+        Aggregate filterableAgg = nestedAgg.nested().aggregations().get("filtered_filterable");
+        if (filterableAgg == null || !filterableAgg.isFilter()) return Collections.emptyList();
 
-        return attrIdAgg.lterms().buckets().array().stream()
-                .map(attrBucket -> {
-                    // 获取属性名称
+        Aggregate attrIdAgg = filterableAgg.filter().aggregations().get("attr_ids");
+        if (attrIdAgg == null || !attrIdAgg.isLterms()) return Collections.emptyList();
+
+        List<SearchFilterDTO.AttrFilterItem> resultList = attrIdAgg.lterms().buckets().array().stream()
+                .map(bucket -> {
+                    Long attrId = bucket.key();
+
                     String attrName = "";
-                    if (attrBucket.aggregations().containsKey("attrName")) {
-                        Aggregate nameAgg = attrBucket.aggregations().get("attrName");
+                    if (bucket.aggregations().containsKey("attr_names")) {
+                        Aggregate nameAgg = bucket.aggregations().get("attr_names");
                         if (nameAgg.isSterms() && !nameAgg.sterms().buckets().array().isEmpty()) {
                             attrName = nameAgg.sterms().buckets().array().get(0).key().stringValue();
                         }
                     }
 
-                    // 获取属性值列表
-                    List<SearchFilterVO.AttrValueAggVO> values = new ArrayList<>();
-                    if (attrBucket.aggregations().containsKey("attrValue")) {
-                        Aggregate valueAgg = attrBucket.aggregations().get("attrValue");
-                        if (valueAgg.isSterms()) {
-                            values = valueAgg.sterms().buckets().array().stream()
-                                    .map(valueBucket -> SearchFilterVO.AttrValueAggVO.builder()
-                                            .value(valueBucket.key().stringValue())
-                                            .count(valueBucket.docCount())
-                                            .build())
-                                    .collect(Collectors.toList());
-                        }
+                    List<SearchFilterDTO.AttrValue> values;
+                    boolean isSelected = query.getAttrValues() != null && query.getAttrValues().containsKey(attrId);
+
+                    if (isSelected) {
+
+                        String patchKey = "patch_attr_" + attrId;
+                        Aggregate patchAgg = aggMap.get(patchKey);
+                        values = parsePatchAttrValues(patchAgg);
+                    } else {
+                        values = parseMainAttrValues(bucket.aggregations().get("attr_values"));
                     }
 
-                    return SearchFilterVO.AttrAggVO.builder()
-                            .attrId(attrBucket.key())
+                    return SearchFilterDTO.AttrFilterItem.builder()
+                            .attrId(attrId)
                             .attrName(attrName)
                             .values(values)
                             .build();
                 })
                 .collect(Collectors.toList());
+
+        return resultList;
     }
 
     /**
-     * 解析价格区间聚合
+     * 解析主面板里的属性值
      */
-    private List<SearchFilterVO.PriceRangeVO> parsePriceAggregation(Aggregate aggregate) {
-        if (aggregate == null || !aggregate.isRange()) {
+    private List<SearchFilterDTO.AttrValue> parseMainAttrValues(Aggregate valueAgg) {
+        if (valueAgg == null || !valueAgg.isSterms()) {
             return Collections.emptyList();
         }
-
-        return aggregate.range().buckets().array().stream()
-                .map(bucket -> {
-                    String key = bucket.key() != null ? bucket.key() : "";
-                    String label = "¥" + key.replace("-", "-¥").replace("+", "以上");
-
-                    return SearchFilterVO.PriceRangeVO.builder()
-                            .key(key)
-                            .label(label)
-                            .from(bucket.from() != null ? BigDecimal.valueOf(bucket.from()) : null)
-                            .to(bucket.to() != null ? BigDecimal.valueOf(bucket.to()) : null)
-                            .count(bucket.docCount())
-                            .build();
-                })
+        return valueAgg.sterms().buckets().array().stream()
+                .map(bucket -> SearchFilterDTO.AttrValue.builder()
+                        .value(bucket.key().stringValue())
+                        .count(bucket.docCount())
+                        .build())
                 .collect(Collectors.toList());
     }
 
     /**
-     * 转换为 VO 列表
+     * 解析补丁面板里的属性值
      */
-    private List<SpuSearchResultVO> convertToVoList(List<SpuDocument> docs) {
-        return docs.stream()
-                .map(doc -> SpuSearchResultVO.builder()
-                        .spuId(doc.getSpuId())
-                        .name(doc.getName())
-                        .subTitle(doc.getSubTitle())
-                        .pic(doc.getPic())
-                        .brandId(doc.getBrandId())
-                        .brandName(doc.getBrandName())
-                        .categoryId(doc.getCategoryId())
-                        .categoryName(doc.getCategoryName())
-                        .minPrice(doc.getMinPrice())
-                        .maxPrice(doc.getMaxPrice())
-                        .sale(doc.getSale())
-                        .inStock(doc.getInStock())
-                        .isNew(Integer.valueOf(1).equals(doc.getNewStatus()))
+    private List<SearchFilterDTO.AttrValue> parsePatchAttrValues(Aggregate patchAgg) {
+
+        if (patchAgg == null || !patchAgg.isFilter()) return Collections.emptyList();
+
+        Aggregate nestedAgg = patchAgg.filter().aggregations().get("nested_path");
+        if (nestedAgg == null || !nestedAgg.isNested()) return Collections.emptyList();
+
+        Aggregate targetFilterAgg = nestedAgg.nested().aggregations().get("target_attr_filter");
+        if (targetFilterAgg == null || !targetFilterAgg.isFilter()) return Collections.emptyList();
+
+        Aggregate validValuesAgg = targetFilterAgg.filter().aggregations().get("valid_values");
+        if (validValuesAgg == null || !validValuesAgg.isSterms()) return Collections.emptyList();
+
+        return validValuesAgg.sterms().buckets().array().stream()
+                .map(bucket -> SearchFilterDTO.AttrValue.builder()
+                        .value(bucket.key().stringValue())
+                        .count(bucket.docCount())
                         .build())
                 .collect(Collectors.toList());
+    }
+
+    /**
+     * 解析价格区间聚合（min/max）
+     */
+    private SearchFilterDTO.PriceRange parsePriceRangeAggregation(Aggregate aggregate) {
+        if (aggregate == null || !aggregate.isFilter()) {
+            return SearchFilterDTO.PriceRange.builder()
+                    .min(BigDecimal.ZERO)
+                    .max(BigDecimal.ZERO)
+                    .build();
+        }
+
+        Aggregate minAgg = aggregate.filter().aggregations().get("min_price");
+        Aggregate maxAgg = aggregate.filter().aggregations().get("max_price");
+
+        BigDecimal min = toBigDecimal(minAgg != null && minAgg.isMin() ? minAgg.min().value() : null);
+        BigDecimal max = toBigDecimal(maxAgg != null && maxAgg.isMax() ? maxAgg.max().value() : null);
+
+        if (min == null && max == null) {
+            return SearchFilterDTO.PriceRange.builder()
+                    .min(BigDecimal.ZERO)
+                    .max(BigDecimal.ZERO)
+                    .build();
+        }
+
+        return SearchFilterDTO.PriceRange.builder()
+                .min(min == null ? BigDecimal.ZERO : min)
+                .max(max == null ? BigDecimal.ZERO : max)
+                .build();
+    }
+
+    private static BigDecimal toBigDecimal(Double value) {
+        if (value == null || value.isNaN() || value.isInfinite()) {
+            return null;
+        }
+        return BigDecimal.valueOf(value);
+    }
+
+    private static <T> Page<T> buildPage(SpuSearchQuery query, long total, List<T> list) {
+        int pageNum = query.getPageNum() == null || query.getPageNum() < 1 ? 1 : query.getPageNum();
+        int pageSize = query.getPageSize() == null || query.getPageSize() < 1 ? 10 : query.getPageSize();
+
+        Page<T> page = new Page<>();
+        page.setPageNum(pageNum);
+        page.setPageSize(pageSize);
+        page.setTotal(total);
+        page.setTotalPage(total == 0 ? 0 : (int) ((total + pageSize - 1) / pageSize));
+        page.setList(list == null ? List.of() : list);
+        return page;
     }
 }
